Tests/CompilerTests/negative/missing-context.hylo
struct A<T> {
  memberwise init
}

fun main() {
  _ = A()
}
