Tests/CompilerTests/negative/missing-context.expected
negative/missing-context.hylo:6.7-10: error: not enough context to infer a type
  _ = A()
      ~~~
